MarcoKitTests/TestData/error/object3.marco
--before
{a "b" c

--after
8: Unexpected end of file
